@@ -1,3 +1,8 @@
+1998-12-01  Jeff Garzik  <jgarzik@pobox.com>
+
+	* autogen.sh:
+	Platform fixes.  grep -q is not portable, do not use.
+
 1998-12-01  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>
 
 	* autogen.sh: Run gettextize if needed.
